--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Personal Budget Visualizer - Track your finances" />
-    <title>Budget Visualizer</title>
+    <meta name="description" content="Personal Budget Visualizer - Track and manage your finances" />
+    <title>Personal Budget Visualizer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
